[project]
name = "intervue2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.3",
    "google>=3.0.0",
    "langchain>=1.2.15",
    "langchain-core>=1.2.27",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.1.6",
    "pydantic>=2.12.5",
    "uvicorn>=0.44.0",
]
